--- a/src/resources/views/mainMenu.fxml
+++ b/src/resources/views/mainMenu.fxml
@@ -41,13 +41,6 @@
          </children>
       </Pane>
       <JFXButton fx:id="reports" buttonType="RAISED" focusTraversable="false" layoutX="1070.0" layoutY="339.0" onMouseClicked="#openReports" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Reports">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/logistics.png" />
-               </image>
-            </ImageView>
-         </graphic>
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
@@ -56,61 +49,26 @@
          <font>
             <Font name="System Bold" size="43.0" />
          </font>
-         <graphic>
-            <ImageView fitHeight="42.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/delivery-man1.png" />
-               </image>
-            </ImageView>
-         </graphic>
       </JFXButton>
       <JFXButton fx:id="buy" buttonType="RAISED" focusTraversable="false" layoutX="1070.0" layoutY="422.0" onMouseClicked="#openBuy" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Buy" textFill="WHITE">
          <font>
             <Font name="Baskerville Old Face" size="36.0" />
          </font>
-         <graphic>
-            <ImageView fitHeight="41.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/delivery-man.png" />
-               </image>
-            </ImageView>
-         </graphic>
       </JFXButton>
-      <JFXButton fx:id="items" buttonType="RAISED" focusTraversable="false" layoutX="1070.0" layoutY="258.0" onMouseClicked="#openItems" prefHeight="73.0" prefWidth="256.0" ripplerFill="#9a2a2a" styleClass="button1" stylesheets="@../styles/main.css" text="Items" textAlignment="RIGHT" textFill="WHITE">
+      <JFXButton fx:id="items" buttonType="RAISED" focusTraversable="false" layoutX="1070.0" layoutY="257.0" onMouseClicked="#openItems" prefHeight="73.0" prefWidth="256.0" ripplerFill="#9a2a2a" styleClass="button1" stylesheets="@../styles/main.css" text="Items" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font name="Baskerville Old Face" size="37.0" />
          </font>
          <effect>
             <Reflection bottomOpacity="0.08" fraction="0.17" topOpacity="0.07" />
          </effect>
-         <graphic>
-            <ImageView fitHeight="57.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/loads.png" />
-               </image>
-            </ImageView>
-         </graphic>
       </JFXButton>
-      <JFXButton fx:id="sell1" buttonType="RAISED" focusTraversable="false" layoutX="1071.0" layoutY="167.0" onMouseClicked="#openSell" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Shops">
-         <graphic>
-            <ImageView fitHeight="61.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/delivery-man1.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <JFXButton fx:id="sell1" buttonType="RAISED" focusTraversable="false" layoutX="1071.0" layoutY="175.0" onMouseClicked="#openSell" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Shops" textAlignment="RIGHT">
          <font>
             <Font name="System Bold" size="43.0" />
          </font>
       </JFXButton>
       <JFXButton fx:id="sell11" buttonType="RAISED" focusTraversable="false" layoutX="1071.0" layoutY="587.0" onMouseClicked="#openSell" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Cheques">
-         <graphic>
-            <ImageView fitHeight="46.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/delivery-man1.png" />
-               </image>
-            </ImageView>
-         </graphic>
          <font>
             <Font name="System Bold" size="43.0" />
          </font>
@@ -136,5 +94,35 @@
          </font>
       </Text>
       <ScrollPane layoutX="588.0" layoutY="213.0" prefHeight="446.0" prefWidth="434.0" style="-fx-background-color: white;" />
+      <ImageView fitHeight="55.0" fitWidth="48.0" layoutX="1094.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/delivery-man1.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="48.0" layoutX="1096.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/loads.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="48.0" layoutX="1095.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/logistics.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="64.0" fitWidth="48.0" layoutX="1093.0" layoutY="433.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/delivery-man.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="48.0" fitWidth="48.0" layoutX="1094.0" layoutY="520.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/sale.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="46.0" fitWidth="82.0" layoutX="1095.0" layoutY="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/cheque.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
