--- a/src/resources/views/buyInvoice.fxml
+++ b/src/resources/views/buyInvoice.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.buyInvoiceController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.buyInvoiceController">
    <children>
       <Text layoutX="421.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="586.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="23.0">
          <font>
@@ -36,6 +36,7 @@
          </font>
       </JFXButton>
       <JFXButton layoutX="1179.0" layoutY="212.0" onMouseClicked="#addNew" prefHeight="57.0" prefWidth="138.0" style="-fx-background-color: #42f45f;" text="ADD NEW" />
-      <JFXButton layoutX="1179.0" layoutY="322.0" onMouseClicked="#delete" prefHeight="57.0" prefWidth="138.0" style="-fx-background-color: red;" text="DELETE" />
+      <JFXButton layoutX="1179.0" layoutY="371.0" onMouseClicked="#delete" prefHeight="57.0" prefWidth="138.0" style="-fx-background-color: red;" text="DELETE" />
+      <JFXButton layoutX="1179.0" layoutY="288.0" onMouseClicked="#editRecord" prefHeight="57.0" prefWidth="138.0" style="-fx-background-color: #42b6f4;" text="EDIT" />
    </children>
 </AnchorPane>
