--- a/src/resources/styles/main.css
+++ b/src/resources/styles/main.css
@@ -19,7 +19,22 @@
     /*-fx-background-color:green;*/
     /*-fx-border-color:lightcoral;*/
 /*}*/
-
+.button2{
+    -fx-background-color:
+            #005e24,
+            linear-gradient(#38424b 0%, #1f2429 20%, #005e24 100%),
+            linear-gradient(#005e24, #005e24),
+            radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+    -fx-background-radius: 5,4,3,5;
+    -fx-background-insets: 0,1,2,0;
+    -fx-text-fill: white;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-font-family: "System";
+    -fx-text-fill: linear-gradient(white, #d0d0d0);
+    -fx-alignment: center;
+    -fx-font-size: 12px;
+    -fx-padding: 10 20 10 20;
+}
 .header{
     -fx-background-color:
             #090a0c,
@@ -32,4 +47,12 @@
     -fx-background-color: #c3c4c4,
     linear-gradient(#d6d6d6 50%, white 100%),
     radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
+}
+
+.formbody{
+    -fx-background-color: #e2e2e2;
+    -fx-background-radius: 20;
+    -fx-background-color: #f2f2f2;
+    -fx-border-radius: 20;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 0);
 }
