--- a/src/resources/views/items.fxml
+++ b/src/resources/views/items.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,14 +17,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.itemController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.itemController">
    <children>
-      <Text layoutX="421.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="586.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="23.0">
-         <font>
-            <Font name="Agency FB Bold" size="65.0" />
-         </font>
-      </Text>
-      <TableView fx:id="itemTable" layoutX="43.0" layoutY="138.0" onMouseClicked="#getSelected" prefHeight="513.0" prefWidth="726.0">
+      <Pane layoutX="17.0" layoutY="143.0" prefHeight="458.0" prefWidth="749.0" styleClass="formbody" stylesheets="@../styles/main.css" />
+      <TableView fx:id="itemTable" layoutX="31.0" layoutY="158.0" onMouseClicked="#getSelected" prefHeight="429.0" prefWidth="720.0">
         <columns>
           <TableColumn fx:id="item_no" prefWidth="101.0" text="Item_no" />
           <TableColumn fx:id="name" prefWidth="192.0" text="Name" />
@@ -26,35 +29,54 @@
             <TableColumn fx:id="sellPrice" prefWidth="155.0" text="Sell Price" />
         </columns>
       </TableView>
-      <AnchorPane layoutX="794.0" layoutY="138.0" prefHeight="250.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+      <AnchorPane layoutX="804.0" layoutY="149.0" prefHeight="250.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
             <JFXTextField fx:id="u_itemId" editable="false" layoutX="43.0" layoutY="16.0" prefHeight="25.0" prefWidth="180.0" promptText="Item Id" />
             <JFXTextField fx:id="u_name" layoutX="43.0" layoutY="64.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
             <JFXTextField fx:id="u_quantity" layoutX="43.0" layoutY="111.0" prefHeight="25.0" prefWidth="180.0" promptText="Quantity" />
             <JFXTextField fx:id="u_buyPrice" layoutX="43.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Buy Price" />
             <JFXTextField fx:id="u_sellPrice" layoutX="283.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Sell Price" />
-            <JFXButton fx:id="update" layoutX="377.0" layoutY="203.0" onMouseClicked="#updateItem" prefHeight="32.0" prefWidth="86.0" style="-fx-background-color: #2bf246;" text="Update" />
+            <JFXButton fx:id="update" layoutX="369.0" layoutY="205.0" onMouseClicked="#updateItem" prefHeight="32.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Update" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="794.0" layoutY="416.0" prefHeight="234.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+      <AnchorPane layoutX="803.0" layoutY="426.0" prefHeight="234.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
             <JFXTextField fx:id="a_itemId" layoutX="40.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" promptText="Item Id" />
             <JFXTextField fx:id="a_name" layoutX="40.0" layoutY="60.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
             <JFXTextField fx:id="a_quantity" layoutX="40.0" layoutY="107.0" prefHeight="25.0" prefWidth="180.0" promptText="Quantity" />
             <JFXTextField fx:id="a_buyPrice" layoutX="40.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Buy Price" />
             <JFXTextField fx:id="a_sellPrice" layoutX="280.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Sell Price" />
-            <JFXButton fx:id="add" layoutX="379.0" layoutY="190.0" onMouseClicked="#addItem" prefHeight="32.0" prefWidth="86.0" style="-fx-background-color: #2bf246;" text="Add" />
+            <JFXButton fx:id="add" layoutX="361.0" layoutY="190.0" onMouseClicked="#addItem" prefHeight="37.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
          </children>
       </AnchorPane>
-      <JFXButton fx:id="back" layoutX="43.0" layoutY="74.0" onMouseClicked="#backMenu" prefHeight="56.0" prefWidth="148.0" style="-fx-background-color: #edb290;" text="Back">
+      <JFXButton fx:id="back" layoutX="19.0" layoutY="618.0" onMouseClicked="#backMenu" prefHeight="52.0" prefWidth="178.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
          <graphic>
              <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                 <Image url="@../icons/left-arrow.png" />
+                <image>
+                    <Image url="@../icons/left-arrow.png" />
+                </image>
              </ImageView>
          </graphic>
          <font>
             <Font size="27.0" />
          </font>
       </JFXButton>
+      <Pane layoutX="-2.0" prefHeight="127.0" prefWidth="1380.0" styleClass="header" stylesheets="@../styles/main.css">
+         <children>
+            <Text fontSmoothingType="LCD" layoutX="407.0" layoutY="40.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0">
+               <fill>
+                  <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="0.319047619047619" startX="1.0" startY="1.0">
+                     <stops>
+                        <Stop color="WHITE" />
+                        <Stop color="WHITE" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </fill>
+               <font>
+                  <Font name="Arial Narrow Bold" size="64.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
