--- a/src/resources/styles/main.css
+++ b/src/resources/styles/main.css
@@ -35,6 +35,23 @@
     -fx-font-size: 12px;
     -fx-padding: 10 20 10 20;
 }
+.buttondelete{
+    -fx-background-color:
+            #db0000,
+            linear-gradient(#38424b 0%, #db0000 20%, #db0000 100%),
+            linear-gradient(#db0000, #db0000),
+            radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
+    -fx-background-radius: 5,4,3,5;
+    -fx-background-insets: 0,1,2,0;
+    -fx-text-fill: white;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-font-family: "System";
+    -fx-text-fill: linear-gradient(white, #d0d0d0);
+    -fx-alignment: center;
+    -fx-font-size: 12px;
+    -fx-padding: 10 20 10 20;
+}
+
 .header{
     -fx-background-color:
             #090a0c,
