--- a/src/resources/views/mainMenu.fxml
+++ b/src/resources/views/mainMenu.fxml
@@ -63,7 +63,7 @@
             <Reflection bottomOpacity="0.08" fraction="0.17" topOpacity="0.07" />
          </effect>
       </JFXButton>
-      <JFXButton fx:id="sell1" buttonType="RAISED" focusTraversable="false" layoutX="1071.0" layoutY="175.0" onMouseClicked="#openSell" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Shops" textAlignment="RIGHT">
+      <JFXButton fx:id="shops" buttonType="RAISED" focusTraversable="false" layoutX="1071.0" layoutY="175.0" onMouseClicked="#openShops" prefHeight="73.0" prefWidth="256.0" styleClass="button1" stylesheets="@../styles/main.css" text="Shops" textAlignment="RIGHT">
          <font>
             <Font name="System Bold" size="43.0" />
          </font>
