--- a/src/resources/views/reports.fxml
+++ b/src/resources/views/reports.fxml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,14 +19,28 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.reportController">
    <children>
       <Pane layoutX="21.0" layoutY="167.0" prefHeight="445.0" prefWidth="756.0" styleClass="formbody" stylesheets="@../styles/main.css" />
-      <AnchorPane layoutX="794.0" layoutY="168.0" prefHeight="445.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
+      <TableView fx:id="reportTable" layoutX="38.0" layoutY="193.0" prefHeight="395.0" prefWidth="718.0">
+         <columns>
+            <TableColumn fx:id="shop_no" prefWidth="101.0" text="C1" />
+            <TableColumn fx:id="name" prefWidth="192.0" text="C2" />
+            <TableColumn fx:id="type" prefWidth="124.0" text="C3" />
+            <TableColumn fx:id="contact" prefWidth="152.0" text="C4" />
+            <TableColumn fx:id="address" prefWidth="155.0" text="C5" />
+         </columns>
+      </TableView>
+      <AnchorPane layoutX="796.0" layoutY="168.0" prefHeight="445.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
-            <JFXTextField fx:id="u_shopId" editable="false" layoutX="43.0" layoutY="16.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop Id" />
-            <JFXTextField fx:id="u_name" layoutX="43.0" layoutY="64.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
-            <JFXButton fx:id="update" layoutX="377.0" layoutY="193.0" prefHeight="32.0" prefWidth="86.0" styleClass="button2" stylesheets="@../styles/main.css" text="Update" />
+            <JFXButton fx:id="generate_report" layoutX="315.0" layoutY="374.0" prefHeight="37.0" prefWidth="148.0" styleClass="button2" stylesheets="@../styles/main.css" text="Generate Report" />
+            <RadioButton fx:id="shop_reports_radio" layoutX="43.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Shopwise Reports Generating" />
+            <RadioButton fx:id="time_reports_radio" layoutX="43.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Time Range Reports Generating" />
+            <ComboBox fx:id="shop_list" layoutX="81.0" layoutY="84.0" prefHeight="25.0" prefWidth="303.0" promptText="Select the Shop" />
+            <DatePicker fx:id="from_date" layoutX="156.0" layoutY="189.0" prefHeight="25.0" prefWidth="226.0" />
+            <Label layoutX="81.0" layoutY="189.0" prefHeight="25.0" prefWidth="49.0" text="From" />
+            <DatePicker fx:id="to_date" layoutX="157.0" layoutY="229.0" prefHeight="25.0" prefWidth="226.0" />
+            <Label layoutX="82.0" layoutY="229.0" prefHeight="25.0" prefWidth="49.0" text="To" />
          </children>
       </AnchorPane>
-      <JFXButton fx:id="back" layoutX="39.0" layoutY="621.0" prefHeight="49.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
+      <JFXButton fx:id="back" layoutX="39.0" layoutY="621.0" onMouseClicked="#backMenu" prefHeight="49.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
          <graphic>
              <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                 <image>
