--- a/src/resources/views/reports.fxml
+++ b/src/resources/views/reports.fxml
@@ -30,7 +30,7 @@
       </TableView>
       <AnchorPane layoutX="796.0" layoutY="168.0" prefHeight="445.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
-            <JFXButton fx:id="generate_report" layoutX="315.0" layoutY="374.0" prefHeight="37.0" prefWidth="148.0" styleClass="button2" stylesheets="@../styles/main.css" text="Generate Report" />
+            <JFXButton fx:id="generate_report" layoutX="315.0" layoutY="374.0" onMouseClicked="#generateReport" prefHeight="37.0" prefWidth="148.0" styleClass="button2" stylesheets="@../styles/main.css" text="Generate Report" />
             <RadioButton fx:id="shop_reports_radio" layoutX="43.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Shopwise Reports Generating" />
             <RadioButton fx:id="time_reports_radio" layoutX="43.0" layoutY="155.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="226.0" text="Time Range Reports Generating" />
             <ComboBox fx:id="shop_list" layoutX="81.0" layoutY="84.0" prefHeight="25.0" prefWidth="303.0" promptText="Select the Shop" />
