--- a/src/resources/styles/main.css
+++ b/src/resources/styles/main.css
@@ -107,3 +107,10 @@
     -fx-border-radius: 20;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 0);
 }
+
+.borders{
+-fx-background-color: white;
+-fx-background-radius: 5;
+-fx-border-radius: 5;
+-fx-effect: dropshadow(three-pass-box, rgba(255, 0, 0, 0.5), 10, 0, 0, 0);
+}
