--- a/src/resources/views/editInvoiceBuy.fxml
+++ b/src/resources/views/editInvoiceBuy.fxml
@@ -9,26 +9,28 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="421.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="586.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="23.0">
-         <font>
-            <Font name="Agency FB Bold" size="65.0" />
-         </font>
-      </Text>
-      <TableView fx:id="invoiceItemTable" layoutX="43.0" layoutY="143.0" prefHeight="327.0" prefWidth="633.0">
-        <columns>
-          <TableColumn fx:id="item_no" prefWidth="108.00003051757812" text="Item_no" />
-          <TableColumn fx:id="name" prefWidth="146.0" text="Name" />
-            <TableColumn fx:id="quantity" prefWidth="121.0" text="Quantity" />
-            <TableColumn fx:id="buyPrice" prefWidth="132.0" text="Buy Price" />
-            <TableColumn fx:id="sellPrice" prefWidth="125.0" text="Sell Price" />
-        </columns>
-      </TableView>
-      <JFXButton fx:id="back" layoutX="43.0" layoutY="74.0" prefHeight="56.0" prefWidth="148.0" style="-fx-background-color: #edb290;" text="Back">
+      <Pane layoutX="22.0" layoutY="146.0" prefHeight="432.0" prefWidth="756.0" styleClass="formbody" stylesheets="@../styles/main.css">
+         <children>
+            <TableView fx:id="invoiceItemTable" layoutX="19.0" layoutY="14.0" prefHeight="400.0" prefWidth="718.0">
+              <columns>
+                <TableColumn fx:id="item_no" prefWidth="108.00003051757812" text="Item_no" />
+                <TableColumn fx:id="name" prefWidth="146.0" text="Name" />
+                  <TableColumn fx:id="quantity" prefWidth="121.0" text="Quantity" />
+                  <TableColumn fx:id="buyPrice" prefWidth="132.0" text="Buy Price" />
+                  <TableColumn fx:id="sellPrice" prefWidth="125.0" text="Sell Price" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+      <JFXButton fx:id="back" layoutX="20.0" layoutY="599.0" prefHeight="56.0" prefWidth="148.0" styleClass="button1" text="Back">
          <graphic>
              <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                  <Image url="@../icons/left-arrow.png" />
@@ -38,14 +40,14 @@
             <Font size="27.0" />
          </font>
       </JFXButton>
-       <AnchorPane layoutX="744.0" layoutY="143.0" prefHeight="257.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+       <AnchorPane layoutX="813.0" layoutY="147.0" prefHeight="253.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
            <children>
                <JFXTextField fx:id="invoice_id" layoutX="31.0" layoutY="24.0" prefHeight="32.0" prefWidth="314.0" promptText="Invoice Number" />
-               <JFXButton fx:id="updateInvoice" layoutX="391.0" layoutY="211.0" prefHeight="32.0" prefWidth="86.0" style="-fx-background-color: #2bf246;" text="Update" />
-            <JFXComboBox fx:id="cheque_no" editable="true" layoutX="31.0" layoutY="80.0" prefHeight="25.0" prefWidth="314.0" promptText="Select the Cheque Number" />
-            <JFXButton fx:id="addCheque" layoutX="365.0" layoutY="82.0" style="-fx-background-color: #f441df;" text="Add Cheque" />
+               <JFXButton fx:id="updateInvoice" layoutX="365.0" layoutY="208.0" prefHeight="37.0" prefWidth="106.0" styleClass="button2" text="Update" />
+            <JFXComboBox fx:id="cheque_no" editable="true" layoutX="31.0" layoutY="82.0" prefHeight="25.0" prefWidth="314.0" promptText="Select the Cheque Number" />
+            <JFXButton fx:id="addCheque" layoutX="365.0" layoutY="74.0" styleClass="button3" text="Add Cheque" />
             <JFXComboBox fx:id="shop_id" editable="true" layoutX="31.0" layoutY="136.0" prefHeight="25.0" prefWidth="314.0" promptText="Select the Shop" />
-            <JFXButton fx:id="addShop" layoutX="365.0" layoutY="136.0" style="-fx-background-color: #f441df;" text="Add Shop" />
+            <JFXButton fx:id="addShop" layoutX="365.0" layoutY="130.0" prefHeight="37.0" prefWidth="106.0" styleClass="button3" text="Add Shop" />
             <JFXDatePicker fx:id="date_issue" layoutX="31.0" layoutY="188.0" prefHeight="25.0" prefWidth="314.0" promptText="Date Issue" />
             <Text fx:id="error1" fill="#dd1111" layoutX="31.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please Fill the Required Fields" visible="false">
                <font>
@@ -59,14 +61,14 @@
             </Text>
            </children>
        </AnchorPane>
-      <AnchorPane layoutX="744.0" layoutY="416.0" prefHeight="240.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+      <AnchorPane layoutX="813.0" layoutY="416.0" prefHeight="246.0" prefWidth="505.0" styleClass="formbody">
          <children>
             <JFXTextField fx:id="itemId" layoutX="31.0" layoutY="24.0" prefHeight="32.0" prefWidth="184.0" promptText="Item Id" />
-            <JFXButton fx:id="updateItem" layoutX="394.0" layoutY="181.0" prefHeight="32.0" prefWidth="86.0" style="-fx-background-color: #2bf246;" text="Update" />
-            <JFXTextField fx:id="itemName" editable="false" layoutX="253.0" layoutY="24.0" prefHeight="32.0" prefWidth="184.0" promptText="Name" />
-            <JFXTextField fx:id="itemQuantity" layoutX="31.0" layoutY="71.0" prefHeight="32.0" prefWidth="184.0" promptText="Quantity" />
-            <JFXTextField fx:id="itemBuyPrice" layoutX="31.0" layoutY="128.0" prefHeight="32.0" prefWidth="184.0" promptText="Buy Price" />
-            <JFXTextField fx:id="itemSellPrice" layoutX="253.0" layoutY="128.0" prefHeight="32.0" prefWidth="184.0" promptText="Sell Price" />
+            <JFXButton fx:id="updateItem" layoutX="366.0" layoutY="201.0" prefHeight="37.0" prefWidth="106.0" styleClass="button2" text="Update" />
+            <JFXTextField fx:id="itemName" editable="false" layoutX="277.0" layoutY="25.0" prefHeight="32.0" prefWidth="194.0" promptText="Name" />
+            <JFXTextField fx:id="itemQuantity" layoutX="31.0" layoutY="106.0" prefHeight="32.0" prefWidth="184.0" promptText="Quantity" />
+            <JFXTextField fx:id="itemBuyPrice" layoutX="30.0" layoutY="188.0" prefHeight="32.0" prefWidth="184.0" promptText="Buy Price" />
+            <JFXTextField fx:id="itemSellPrice" layoutX="275.0" layoutY="107.0" prefHeight="32.0" prefWidth="194.0" promptText="Sell Price" />
             <Text fx:id="error2" fill="#dd1111" layoutX="31.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="* Please Fill the Invoice Details" visible="false">
                <font>
                   <Font name="System Bold" size="15.0" />
@@ -79,19 +81,36 @@
             </Text>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="249.0" layoutY="524.0" prefHeight="103.0" prefWidth="221.0" style="-fx-background-color: #69ef6d; -fx-background-radius: 50;">
+      <AnchorPane layoutX="450.0" layoutY="602.0" prefHeight="57.0" prefWidth="326.0" style="-fx-background-color: white;" styleClass="borders">
          <children>
-            <Text layoutX="75.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total ">
+            <Text fill="#404040" layoutX="38.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total : ">
                <font>
                   <Font size="28.0" />
                </font>
             </Text>
-            <Text fx:id="total" fill="#1e1dcf" layoutX="70.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="16500.00">
+            <Text fx:id="total" fill="#bc0000" layoutX="195.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="16500.00">
                <font>
-                  <Font size="20.0" />
+                  <Font size="28.0" />
                </font>
             </Text>
          </children>
       </AnchorPane>
+      <Pane layoutX="-2.0" layoutY="-2.0" prefHeight="127.0" prefWidth="1380.0" styleClass="header" stylesheets="@../styles/main.css">
+         <children>
+            <Text fontSmoothingType="LCD" layoutX="407.0" layoutY="40.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0">
+               <font>
+                  <Font name="Arial Narrow Bold" size="64.0" />
+               </font>
+               <fill>
+                  <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="0.319047619047619" startX="1.0" startY="1.0">
+                     <stops>
+                        <Stop color="WHITE" />
+                        <Stop color="WHITE" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Text>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
