--- a/src/resources/views/alert/selectItemError.fxml
+++ b/src/resources/views/alert/selectItemError.fxml
@@ -4,23 +4,33 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.alert.selectItemErrorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="481.0" styleClass="body" stylesheets="@../../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.alert.selectItemErrorController">
     <children>
-        <ImageView fitHeight="108.0" fitWidth="86.0" layoutX="30.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+      <Pane prefHeight="41.0" prefWidth="481.0" styleClass="header" stylesheets="@../../styles/main.css">
+         <children>
+            <Text fill="#dd5a5a" layoutX="184.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error..!" textAlignment="CENTER" wrappingWidth="113.57421875">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+        <ImageView fitHeight="58.0" fitWidth="64.0" layoutX="55.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../icons/warning.png" />
             </image>
         </ImageView>
-        <Text layoutX="222.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Failed">
+        <Text fill="#ab0000" layoutX="132.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Failed..!">
             <font>
-                <Font size="25.0" />
+                <Font size="20.0" />
             </font>
         </Text>
-        <JFXButton fx:id="close" layoutX="390.0" layoutY="108.0" onAction="#close" prefHeight="25.0" prefWidth="69.0" style="-fx-background-color: #f7112c;" text="Close" />
-      <Text layoutX="210.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please Select an item from the Table">
+        <JFXButton fx:id="close" layoutX="393.0" layoutY="103.0" onAction="#close" prefHeight="37.0" prefWidth="76.0" styleClass="buttondelete" stylesheets="@../../styles/main.css" text="Close" />
+      <Text fill="#282828" layoutX="132.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please Select an item from the Table">
          <font>
             <Font size="15.0" />
          </font>
